# Terrain-generator

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Event.h  Main.cpp  README.md  Window.cpp  Window.h
Application/: Application.cpp  Event.h  Main.cpp  Utils.h  Window.cpp  Window.h
Engine/: Camera.hpp  Component.hpp  Math.hpp  Scene.h  Scene.hpp  SceneManager.h  Utils.hpp
Engine/Core/: Memory.cpp  Memory.hpp  Platform.hpp  Utils.hpp
Includes/glad/: glad.h
Resources/Shaders_3D/: blinn_phong_fs.glsl  blinn_phong_vs.glsl
Tiny3D/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  Lights.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp
Tiny3D/Core/: Graphics.cpp  Graphics.hpp  Math.hpp  Memory.cpp  Memory.hpp  Utils.hpp
terrain_generator/: generator.h  generator.hpp  generator.сpp  readme.txt  run_ref.cpp
